add email verification to register