@@ -28,6 +28,7 @@ public class RegisterMenu extends Application {
     private final double LENGTH_OF_FULL_LINE = 32;
     private final double HEIGHT_OF_DARK_BACK = 420;
     private final double HEIGHT_OF_DARK_BACK1 = 315;
+    private final double HEIGHT_OF_DARK_BACK_EMAIL = 255;
 
     public TextField username;
     public TextField email;
@@ -42,6 +43,9 @@ public class RegisterMenu extends Application {
     public TextField answer;
     public ChoiceBox questions;
     public TextField confirmAnswer;
+    public Pane emailPain;
+    public Rectangle darkBackEmail;
+    public TextField emailConfirm;
 
     private Label warning;
     private Client client;
@@ -75,16 +79,29 @@ public class RegisterMenu extends Application {
         String toRegex = "register -u " + this.username.getText() + " -p " + this.password.getText() + " " + this.confirmPassword.getText() + " -n " + this.nickname.getText() + " -e " + this.email.getText();
         Result result = (Result) client.sendCommand(toRegex);
         if (!result.isSuccessful()) {
-            sayAlert(result.getMessage().get(0), true, true);
+            sayAlert(result.getMessage().get(0), 0, true);
             if (result.getMessage().size() > 1) {
                 this.username.setText(result.getMessage().get(1));
             }
         } else {
             mainPain.setVisible(false);
             mainPain.setDisable(true);
-            questionPain.setVisible(true);
+            emailPain.setVisible(true);
+            emailPain.setDisable(false);
+            Client.getClient().getSender().sendCommand("send email -e " + this.email.getText());
+            sayAlert(result.getMessage().get(0), 2, false);
+        }
+    }
+
+    public void next(MouseEvent mouseEvent) {
+        Result result = (Result) client.getSender().sendCommand("verify email -c " + this.emailConfirm.getText() + " -e " + this.email.getText());
+        if (result.isSuccessful()) {
+            emailPain.setVisible(false);
+            emailPain.setDisable(true);
             questionPain.setDisable(false);
-            sayAlert(result.getMessage().get(0), false, false);
+            questionPain.setVisible(true);
+        } else {
+            sayAlert(result.getMessage().getFirst(), 2, true);
         }
     }
 
@@ -105,27 +122,27 @@ public class RegisterMenu extends Application {
     public void setQuestion(MouseEvent mouseEvent) {
         String toRegex = "pick question -q " + questions.getSelectionModel().getSelectedIndex() + " -a " + this.answer.getText() + " -c " + this.confirmAnswer.getText() + " -u " + this.username.getText();
         Result result = (Result) client.sendCommand(toRegex);
-        sayAlert(result.getMessage().getFirst(), false, !result.isSuccessful());
+        sayAlert(result.getMessage().getFirst(), 1, !result.isSuccessful());
     }
 
     public void finish(MouseEvent mouseEvent) throws Exception {
         String toRegex = "has answered question -u " + this.username.getText();
         boolean hasAnsweredTheQuestion = (boolean) client.sendCommand(toRegex);
-        if (hasAnsweredTheQuestion){
+        if (hasAnsweredTheQuestion) {
             new LoginMenu().start(ApplicationRunningTimeData.getStage());
         } else {
-            sayAlert("Please answer the security question! and set question", false, true);
+            sayAlert("Please answer the security question! and set question", 1, true);
         }
     }
 
-    private void sayAlert(String warning, boolean isMain, boolean isRed) {
+    private void sayAlert(String warning, int painBack, boolean isRed) {
         int n = (int) (warning.length() / LENGTH_OF_FULL_LINE);
-        Rectangle back = (isMain ? darkBack : darkBack1);
-        back.setHeight(isMain ? HEIGHT_OF_DARK_BACK : HEIGHT_OF_DARK_BACK1);
+        Rectangle back = (painBack == 0 ? darkBack : (painBack == 1 ? darkBack1 : darkBackEmail));
+        back.setHeight(painBack == 0 ? HEIGHT_OF_DARK_BACK : (painBack == 1 ? HEIGHT_OF_DARK_BACK1 : HEIGHT_OF_DARK_BACK_EMAIL));
         back.setHeight(back.getHeight() + (n + 1) * HEIGHT_OF_TEXT_WARNING);
         Pane pane = ApplicationRunningTimeData.getPane();
         pane.getChildren().remove(this.warning);
-        this.warning = createWarningLabel(warning, n + 1, isRed, isMain);
+        this.warning = createWarningLabel(warning, n + 1, isRed, painBack == 0);
         pane.getChildren().add(this.warning);
     }
 
@@ -142,7 +159,7 @@ public class RegisterMenu extends Application {
     }
 
     public void buttonEntered(MouseEvent mouseEvent) {
-        if (mouseEvent.getSource() instanceof Rectangle){
+        if (mouseEvent.getSource() instanceof Rectangle) {
             Pane paneS = (Pane) ((Rectangle) mouseEvent.getSource()).getParent();
             int n = paneS.getChildren().indexOf((Rectangle) mouseEvent.getSource()) + 1;
             ((Label) paneS.getChildren().get(n)).setTextFill(Paint.valueOf("e47429"));
@@ -152,7 +169,7 @@ public class RegisterMenu extends Application {
     }
 
     public void buttonExited(MouseEvent mouseEvent) {
-        if (mouseEvent.getSource() instanceof Rectangle){
+        if (mouseEvent.getSource() instanceof Rectangle) {
             Pane paneS = (Pane) ((Rectangle) mouseEvent.getSource()).getParent();
             int n = paneS.getChildren().indexOf((Rectangle) mouseEvent.getSource()) + 1;
             ((Label) paneS.getChildren().get(n)).setTextFill(Paint.valueOf("black"));
